# mediaComputing

./: .gitignore  README.md
coordinate_based_image_cloning/: Cargo.toml  README.md  cuda_setup.sh
coordinate_based_image_cloning/src/: cloning.rs  lib.rs  main.rs
coordinate_based_image_cloning/src/cuda/: mvc_interpolant.cu  mvc_interpolant.ptx
imageMatting/: Cargo.toml
image_matting/: Cargo.toml  README.md
image_matting/src/: lib.rs  linear.rs  main.rs  utils.rs
image_matting/src/method/: iamge.bak  image_method.rs  mod.rs
linear/: Cargo.toml
linear/src/: lib.rs
poisson_image_editing/: Cargo.toml  README.md
poisson_image_editing/src/: lib.rs  linear.rs  main.rs
