cargo-features = ["profile-overrides"]

[package]
name = "coordinate_based_image_cloning"
version = "0.1.0"
authors = ["monell <monell.zhong@gmail.com>"]
edition = "2018"

[profile.dev.overrides."*"]
opt-level = 3

[dependencies]
linear = {path = "./../linear"}
clap = "2.33.0"
image = "*"
num-traits = "0.2.8"
rayon = "1.2.0"
log = "0.4.8"
simplelog = "^0.7.4"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
stopwatch = "0.0.7"